public/css/style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,600i,700,700i');

body{
	font-family: 'Open Sans', sans-serif;
}
#back-to-top {
    position: fixed;
    bottom: 40px;
    right: 40px;
    z-index: 9999;
    width: 32px;
    height: 32px;
    text-align: center;
    line-height: 30px;
    background: #444;
    color: #f5f5f5;
    cursor: pointer;
    border: 0;
    border-radius: 2px;
    text-decoration: none;
    transition: opacity 0.2s ease-out;
    opacity: 0;
}
#back-to-top.show {
    opacity: 1;
}
#content {
    height: 2000px;
}
footer{
	background-color: #fff;
	text-align: center;
	padding: 20px;
	font-family: 'Open Sans', sans-serif;

}
footer p{
	font-size: 15px;
}
form button{
	background-color: #ee4859;
	border: none;
	border-radius: 3px !important;
	color: #fff;
	font-family: 'Open Sans', sans-serif;
	font-size: 14px;
	padding: 10px 20px;
	-webkit-box-shadow: 3px 6px 18px 0px rgba(0,0,0,0.28);
	-moz-box-shadow: 3px 6px 18px 0px rgba(0,0,0,0.28);
	box-shadow: 3px 6px 18px 0px rgba(0,0,0,0.28);
	margin: 20px !important;
}
.center{
	text-align: center;
}
section{
	text-align: center;
	padding: 40px 80px;
}

@media(max-width:800px){
	section{
		padding: 40px 10px;
	}
}

section h2{
	color: #00ad68;
	margin-bottom: 10px;
	font-weight: 600;
	text-align: center;
	font-size: 32px;
	font-weight: 600;
	text-transform: uppercase;
}
section h2:after{
	content: "";
    border-bottom: 2px solid transparent;
    width: 6%;
    /* left: 25px; */
    top: 15px;
    display: block;
    -webkit-border-image: url(../img/border-bottom.png);
    -o-border-image: url(../img/border-bottom.png);
    border-image: url(../img/border-bottom.png);
    border-image-slice: 8;
    border-image-width: 1px;
    border-image-outset: 0;
    border-image-repeat: stretch;
    margin: 20px auto;
}

section p{
	font-size: 16px;
	font-family: 'Open Sans', sans-serif;
	font-weight: 400;
	line-height: 19px;
    padding: 10px;
    color: #536168;
}
section .block{
	width: 100%;
}
section .block-50{
	width: 50%;
	float: left;
}
@media (max-width: 800px){
	section .block-50{
		width: 100%;
	}
}
section .block-30{
	width: 30%;
	display: inline-block;
	margin: 1%;
}
@media (max-width: 800px){
	section .block-30{
		width: 100%;
		display: block;
	}
}
section .block h3{
	font-size: 16px;
	color: #536168;
}
section .block p{
	font-size: 14px;
    line-height: 18px;
	color: #536168;
}
section .block img{
	width: 10%;
	display: inline-block;
	margin: 5px 60px;
}
@media (max-width: 800px){
	section .block img{
		width: 35%;
		margin: 10px auto;
	}
}
section.video{
	height: 100vh;
	width: 100%;
}
@media (max-width:800px){
	section.video{
		height: 65vh;
	}
}
section.video video{
	width: 100%;
	height: 100%;
}
section.sobre{
	background-color: #f2f2f2;
}
section.sobre .slider{
	height: 100%;
	display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin: 25px 0;
}
section.sobre .slider iframe{
	margin: 0 auto !important;
}
@media (max-width: 500px){
	section.sobre .slider iframe{
		display: none;
		margin: 0 auto !important;
	    width: 320px !important;
	    height: 214px !important;
	}
}
section.sobre .block{
	margin: 20px 0;
}
section.sobre h3{
	font-weight: 700;
}

section.eixos .eixo-itens{
	column-width: 30%;
	column-count: 3;
  	-webkit-column-count: 3;
  	-moz-column-count: 3;
	column-gap: 15px;
	max-width: 1100px;
	margin: 0 auto;
}
@media (max-width: 800px){
	section.eixos .eixo-itens{
		column-width: 50%;
		column-count: 2;
	  	-webkit-column-count: 2;
	  	-moz-column-count: 2;
	}
}
@media (max-width: 420px){
	section.eixos .eixo-itens{
		column-width: 100%;
		column-count: 1;
	  	-webkit-column-count: 1;
	  	-moz-column-count: 1;
	}
}
.eixo-itens .item{
	display: block;
  	column-break-inside: avoid;
  	break-inside: avoid;
  -webkit-column-break-inside: avoid;
  	width: 100%;
  	margin: 10px;
}
.eixo-itens .item h3{
	background-color: #839aa6;
	border-radius: 5px;
	padding: 10px;
	font-size: 18px;
	color: #fff;
	font-weight: 400;
}
.eixo-itens .item h4{
	background-color: #f2f2f2;
	border-radius: 5px;
	padding: 10px;
	font-size: 16px;
	color: #839aa6;
	font-weight: 400;
	width: 100%;
	display: block;
	margin: 7px 0;
}
.eixo--item{
	padding: 20px 0;
	text-align: left;
}
/*.eixo-itens .item:nth-child(3){
	height: 880px;
}*/
.eixo--item h3{
	color: #ee4859;
	font-size: 22px;
	font-weight: 700;
	font-style: italic;
	text-align: center;
	margin: 20px;
	text-transform: uppercase;
}
.eixo--tipos{
	/*column-width: 380px;*/
    column-gap: 20px;
    -moz-column-gap:20px;
    -webkit-column-gap:20px;
    column-count: 2;
  	-webkit-column-count: 2;
  	-moz-column-count: 2;
    /* max-width: 1100px; */
    margin: 0px auto;
    -moz-column-fill: balance;
       column-fill: balance;
}
/*.eixo--tipos:last-child{
	max-height: 1470px;
}*/
@media (max-width: 980){
	.eixo--tipos{
		max-height: 1600px;
	}
}
@media (max-width: 920){
	.eixo--tipos{
		max-height: 1700px;
	}
}
@media (max-width: 860){
	.eixo--tipos{
		max-height: 1800px;
	}
}
.eixo--tipo{
 	break-inside: avoid;
  	-webkit-column-break-inside: avoid;
  	-webkit-column-break-inside: avoid;
  	-moz-column-break-inside: avoid;
 	background-color: #fff;
 	padding: 10px 30px;
 	border-radius: 20px;
 	margin: 10px;
}
.eixo--tipo h3{
	color: #536168;
	font-size: 18px;
	font-weight: 600;
	font-style: normal;
	text-align: left;
	margin-left: 25px;
	padding: 0;
}
.eixo--tipo label{
	padding-left: 5px;
	font-family: 'Open Sans', sans-serif;
	font-size: 13px;
	font-weight: 400;
	line-height: 16px;
	color: #536168;
}
.eixo--item:first-child .eixo--tipos{
	max-height: 1450px;
}
@media (max-width: 980){
	.eixo--item:first-child .eixo--tipos{
		max-height: 1750px;
	}
}
@media (max-width: 600){
	.eixo--item:first-child .eixo--tipos{
		max-height: auto;
	}
}
@media (max-width: 700px){
	.eixo--tipos{
		column-count: 1;
  		-webkit-column-count: 1;
  		-moz-column-count: 1;
	}
	.eixo--tipo{
		margin: 0;
	}
}
.form{
	margin: 15px 0;
}

section.participe form{
	width: 50%;
	text-align: left;
	margin: 0 auto;
}
@media (max-width: 800px){
	section.participe form{
		width: 100%;
	}
}
section.participe form .form-group{
	margin-bottom: 0rem;
	margin: 15px 0;
}

section.propostas{
	background-color: #f2f2f2;
}

section.contribuicoes{
	background-color: #f2f2f2;
	display: flex;
	align-items: center;
	justify-content: center;
	padding: 20px;
}
@media (max-width: 800px){
	section.contribuicoes{
		display: block;
	}
}
section.contribuicoes .contribuicao p:first-child{
	font-style: italic;
}
section.contribuicoes .contribuicao{
	align-self: flex-start;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before,.custom-control-input:checked~.custom-control-label::before{
	background-color: #00ad68 !important;
}
.custom-checkbox .custom-control-label::before {
    border-radius: 0 !important;
}
.custom-control-label::before {
    background-color: rgb(0,0,0,0);
    border: 1px solid #839aa6;
}
.custom-control-label {
    position: relative;
    margin-bottom: 0px;
    padding-top: 5px;
}
.alert{
	position: fixed;
    top: 60px;
    right: 20px;
    z-index: 999999;
}

.error-message{
	color: red;
}

.swiper-container {
  width: 100%;
  height: 200px;
}
.swiper-slide {
  text-align: center;
  font-size: 18px;

  /* Center slide text vertically */
/*	      display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;*/
  display: block;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}
.swiper-pagination-bullet-active {
    opacity: 1;
    background: #ee4859 !important;
}
.modal p{
	font-family: 'Open Sans',sans-serif;
    font-size: 18px;
    text-align: center;
    font-weight: 300;
}
.modal .modal-footer{
	border-top: none;
}
.modal button{
	    background-color: #ee4859;
    border: 0;
    font-family: 'Open Sans',sans-serif;
    font-size: 16px;
    font-weight: 300;
}

